# rs_ray_toy

./: Cargo.toml  README  README.md  TODO  TODO.md
examples/: make_scene.rs
samples/: scene.json  scene.txt
src/: bssrdf.rs  bvh.rs  camera.rs  color.rs  core.rs  film.rs  geometry.rs  integrator.rs  interaction.rs  interpolation.rs  lib.rs  lights.rs  lowdiscrepancy.rs  main.rs  material.rs  medium.rs  memory.rs  microfacet.rs  mipmap.rs  misc.rs  objparser.rs  primitives.rs  reflection.rs  renderprocess.rs  rtoycore.rs  sampler.rs  sampling.rs  scene.rs  spectrum.rs  transform.rs
src/filters/: boxfilter.rs  gaussian.rs  mod.rs  trianglefilter.rs
src/integrator/: ao.rs  directlighting.rs  intersect_debug.rs  mod.rs  path.rs  sppm.rs  volpath.rs
src/lights/: diffuse.rs  distant.rs  infinite.rs  mod.rs  point.rs
src/material/: debug_material.rs  disney.rs  glass.rs  matte.rs  metal.rs  mirror.rs  mixmat.rs  mod.rs  plastic.rs  translucent.rs
src/medium/: grid.rs  homogeneous.rs  mod.rs
src/samplers/: halton.rs  mod.rs  stratified.rs
src/shape/: mod.rs  sphere.rs  triangle.rs
src/texture/: bilerp.rs  checkerboard.rs  imagemap.rs  mix.rs  mod.rs  scale.rs  uv.rs  windy.rs  wrinkled.rs
