[package]
name = "rs_ray_toy"
version = "0.0.1"
authors = ["pppkin <leoihungkin@outlook.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
rand = "0.7"
image = "0.23.3"
lazy_static = "1.4.0"
rayon = "1.5"

[[bin]]
name = "rs_ray_toy"
path = "src/main.rs"

#![allow(dead_code)]
#![allow(warnings)]
